addons/logging-operator/logging/resources/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fluentbit-traffic
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: fluentbit
      app.kubernetes.io/instance: logging
  policyTypes:
  - Egress
  egress:
  - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fluentd-traffic
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: fluentd
      app.kubernetes.io/instance: logging
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: fluentbit
          app.kubernetes.io/instance: logging
    ports:
    - port: 24240
      protocol: TCP
  egress:
  - {}
